07-ingress/default/overlays/ingress_istio_on/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: front.lab-ingress.svc
  name: front
spec:
  ingressClassName: nginx
  rules:
  - host: lab-ingress-front.thebox.polovov.hf.flant.com
    http:
      paths:
      - backend:
          service:
            name: front
            port:
              name: http
        path: /
        pathType: Prefix
